Fix some layout issues

--- a/paroles/static/css/parole2.css
+++ b/paroles/static/css/parole2.css
@@ -64,7 +64,7 @@ html {
 
 }
 
-html * {
+* {
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
   box-sizing: border-box;         /* Opera/IE 8+ */
@@ -88,18 +88,6 @@ section {
   margin-right:auto;
   width: 700px;
   padding: 0;
-
-/*
-  height:700px;
-  display:box;
-  display:-moz-box;
-  box-orient: vertical;
-  -moz-box-orient: vertical;
-  -webkit-box-orient: vertical;
-  box-pack: center;
-  -moz-box-pack: center;
-  -webkit-box-pack: center;
-*/
 }
 
 article.citation {
@@ -110,18 +98,26 @@ article.citation {
   margin-top:-120px; /* negative half of the height */
   /**/
 
+
+  width:700px;
+}
+
+article.citation div.parole {
   background:white;
   text-align:center;
-
   border-radius:10px;
-  width:700px;
+}
+
+article.citation div.parole h2 {
+  padding-top:10px;
+  font-size: 20px;
+  color: grey;
 }
 
 article.citation blockquote {
   font-size:24px;
   width:100%;
-  margin-bottom:60px; /* when the citation is long, make sure there is enough room so that it does not overlap
-                         the text and links in div.bottom */
+  margin:40px 0;
 }
 
 article.citation blockquote:before,
@@ -146,10 +142,9 @@ article.citation blockquote:after {
 
 article.citation div.bottom {
   text-align:center;
-  position: absolute;
-  bottom: 20px;
   color: grey;
   width:100%;
+  padding-bottom: 10px;
 }
 
 article.citation div.bottom span.author:after,
